[package]
name = "bls-eth"
version = "0.2.4"
authors = ["Doron <doronz@zengo.com>", "Omer <omer@zengo.com>", "Denis <dsurv@yandex.ru>"]
description = "threshold BLS library"
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
zeroize = "1"
rand = "0.7.3"
ff-zeroize = "0.6.3"
round-based = { version = "0.1.0", features = [] }
thiserror = "1.0.23"
sha2 = "0.9.9"
hex = "0.4.2"
anyhow = "1.0.38"
curv-kzen = "0.9"
group = "0.12.0"

[dependencies.curv-bls12-381]
git = "https://github.com/RockX-SG/curv-bls12-381"
branch = "main"
default-features = false

[dev-dependencies]
criterion = "0.3.3"
bls_sigs_ref = "0.3.0"
round-based = { version = "0.1.0", features = ["dev"] }

# Example dependencies
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0.2", features = ["full"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
futures = "0.3.12"
async-stream = "0.3.0"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
serde_json = "1.0"
structopt = "0.3.21"

[build-dependencies]
tonic-build = "0.4.2"

[lib]
crate-type = ["lib"]

[features]
default = ["curv-kzen/rust-gmp-kzen", "curv-bls12-381/rust-gmp-kzen"]
num-bigint = ["curv-kzen/num-bigint", "curv-bls12-381/num-bigint"]
# Internally used feature for testing purposes. You normally don't want to use it.
dev = []

[[bench]]
name = "criterion"
harness = false
required-features = ["dev"]
